@@ -1,0 +1,1 @@
+NEWS files are stupid.
